--- a/helm-chart-sources/trino/templates/deployment-coordinator.yaml
+++ b/helm-chart-sources/trino/templates/deployment-coordinator.yaml
@@ -49,6 +49,10 @@ spec:
           persistentVolumeClaim:
             claimName: {{ .Values.accessControl.pvcName }}
         {{- end }}{{- end }}
+        - name: data-volume
+          persistentVolumeClaim:
+            claimName: data
+
       {{- if .Values.initContainers.coordinator }}
       initContainers:
       {{-  tpl (toYaml .Values.initContainers.coordinator) . | nindent 6 }}
@@ -77,6 +81,9 @@ spec:
             - mountPath: {{ .Values.server.config.path }}/access-control
               name: {{ .Values.accessControl.pvcVolumeName | default "access-control-pvc-volume" }}
             {{- end }}{{- end }}
+            - mountPath: {{ .Values.server.node.dataDir }}
+              name: data-volume
+
           ports:
             - name: http-coord
               containerPort: {{ .Values.server.config.http.port }}
