--- a/helm-chart-sources/trino/values.yaml
+++ b/helm-chart-sources/trino/values.yaml
@@ -1,6 +1,7 @@
 image:
   repository: docker.io/sbagal/trino 
-  tag: tagsync1 
+  # tag: tagsync1 # working
+  tag: tagsyncdebug1
   pullPolicy: IfNotPresent
   securityContext:
     runAsUser: 1000
@@ -150,57 +151,7 @@ connectors:
   #   elasticsearch.auth.user=elastiuser
   #   elasticsearch.auth.password=elasticpassword
   #   elasticsearch.tls.enabled=true
-    hive.properties: |-
-      connector.name=hive-hadoop2
-      hive.metastore.uri=thrift://hive-metastore:9083
-      hive.s3.aws-access-key=MHmvfvpGXQxERYv7jcuJ
-      hive.s3.aws-secret-key=r1GDVvFebYKoczdjzLFuMZhzzOvBiCs2cOaZw/SQ
-      hive.s3.endpoint=s3.openshift-storage.svc:80
-      hive.s3.path-style-access=true
-      hive.s3.ssl.enabled=false
-      hive.metastore.thrift.impersonation.enabled=true
 
-    applicationstarschema.properties: |-
-     connector.name=sqlserver
-     connection-url=jdbc:sqlserver://LASETLTST01.fnbm.corp:1433;database=ApplicationStarSchema
-     connection-user=bi_test
-     connection-password=icBN1nmGUku2uAICE79q
-
-    caretreatment.properties: |-
-     connector.name=sqlserver
-     connection-url=jdbc:sqlserver://LASETLTST01.fnbm.corp:1433;database=CareTreatment
-     connection-user=bi_test
-     connection-password=icBN1nmGUku2uAICE79q
-
-    tableaureportprocessing.properties: |-
-     connector.name=sqlserver
-     connection-url=jdbc:sqlserver://LASETLTST01.fnbm.corp:1433;database=TableauReportProcessing
-     connection-user=bi_test
-     connection-password=icBN1nmGUku2uAICE79q
-
-    marketingproducts.properties: |-
-     connector.name=sqlserver
-     connection-url=jdbc:sqlserver://LASETLTST01.fnbm.corp:1433;database=MarketingProducts
-     connection-user=bi_test
-     connection-password=icBN1nmGUku2uAICE79q
-
-    marketingproductsprocessing.properties: |-
-     connector.name=sqlserver
-     connection-url=jdbc:sqlserver://LASETLTST01.fnbm.corp:1433;database=MarketingProductsProcessing
-     connection-user=bi_test
-     connection-password=icBN1nmGUku2uAICE79q
-
-    casts06.properties: |-
-     connector.name=oracle
-     connection-url=jdbc:oracle:thin:@ORACASTST06.fnbm.corp:1521/CASTS06
-     connection-user=caps
-     connection-password=ctst
-
-    kornerstone.properties: |-
-     connector.name=postgresql
-     connection-url=jdbc:postgresql://laspgtst01.fnbm.corp:5432/kornerstone
-     connection-user=cornerstone
-     connection-password=cornerstone
 
 schemas: {}
   # Custom schemas that will be mounted in /etc/trino/schemas
