hive-metastore chart update for AWS KEYs

--- a/helm-chart-sources/hive-metastore/templates/statefulset.yaml
+++ b/helm-chart-sources/hive-metastore/templates/statefulset.yaml
@@ -50,6 +50,19 @@ spec:
           mountPath: /data/hive
         - name: hive-lib
           mountPath: /hive/lib
+        env:
+          - name: AWS_ACCESS_KEY_ID
+            valueFrom:
+              secretKeyRef:
+                name: {{ .Values.s3Secret }} 
+                key: AWS_ACCESS_KEY_ID
+
+          - name: AWS_SECRET_ACCESS_KEY
+            valueFrom:
+              secretKeyRef:
+                name: {{ .Values.s3Secret }}
+                key: AWS_SECRET_ACCESS_KEY
+
       volumes:
       - name: hive-data
         persistentVolumeClaim:
@@ -60,4 +73,5 @@ spec:
       - name: hive-config
         configMap:
           name: {{ include "hiveMetastore.fullname" . }}
+
 
